--- a/collections/_posts/2019-12-18-chai.markdown
+++ b/collections/_posts/2019-12-18-chai.markdown
@@ -7,7 +7,12 @@ author: Bean
 metadescription: "DAI in Fulcrum now earns the DSR using Chai. We are proud to be the first platform to offer the DSR for our DAI lenders."
 intro: "We are proud to be the first platform to offer the DSR for our DAI lenders."
 ---
-Yesterday we initiated a transaction that updates the iDAI logic contract. It has passed through our timelock, and now DAI in [Fulcrum](https://fulcrum.trade/#/lend) lending pools that hasn’t been loaned out is used to mint [Chai](http://chai.money). It's means that if you lend DAI on Fulcrum you automatically earn Maker DSR (4% APR at the moment of writing) AND Fulcrum's own APR. 
+Yesterday we initiated a transaction that updates the iDAI logic contract. It has passed through our timelock, and now DAI in [Fulcrum](https://fulcrum.trade/#/lend) lending pools that hasn’t been loaned out is used to mint [Chai](http://chai.money). It's means that if you lend DAI on Fulcrum you automatically earn Maker DSR (4% APR at the moment of writing) AND Fulcrum's own APR.
+
+## What is CHAI ?
+
+![](/images/blog/vitalik_like_chai.png)
+_[Vitalik likes the idea of CHAI wrapper](https://twitter.com/VitalikButerin/status/1207365124518023169)_
 
 Chai is a simple ERC20 wrapper for the MakerDAO Dai Savings Rate (DSR) and was created by dAppHub. This means that as long as there are reserves sitting idle, supply rates will receive a boost from the DSR. Supply rates can be queried on iDAI as before and already include the DSR in returned values. The addition of the DSR affects the supply rate according to the following:
 
